# Articulated_object_simulation

./: .gitignore  README.md  package.xml  requirements.txt  setup.py
scripts/: convonet_setup.py  generate_data_s2m.sh  generate_data_seg.py  generate_data_seg_test.py
src/s2u/: perception.py  simulation.py
src/s2u/utils/: axis2transform.py  btsim.py  implicit.py  io.py  mesh2sdf.py  misc.py  parallel_exec.py  saver.py  urdfEditor.py  visual.py
